# ekko

./: .gitignore  AGENT.md  README.md  config.py  harness.py  pyproject.toml
.harness/: active_project  board.json  counter.json  project.json  registry.json
.playwright-mcp/: page-2026-04-13T06-55-16-362Z.yml  page-2026-04-13T07-16-43-665Z.yml  page-2026-04-13T07-17-51-484Z.yml  page-2026-04-13T07-19-13-104Z.yml  page-2026-04-13T07-19-23-227Z.yml  page-2026-04-13T07-19-52-792Z.yml  page-2026-04-13T07-20-08-961Z.yml  page-2026-04-13T08-45-49-347Z.yml  page-2026-04-13T08-46-33-322Z.yml  page-2026-04-13T10-30-35-839Z.yml  page-2026-04-13T10-31-11-941Z.yml  page-2026-04-13T10-31-34-878Z.yml  page-2026-04-13T10-31-47-671Z.yml  page-2026-04-13T10-32-16-031Z.yml  page-2026-04-13T10-36-23-907Z.yml  page-2026-04-13T10-37-13-184Z.yml  page-2026-04-13T10-38-05-663Z.yml  page-2026-04-13T10-38-49-742Z.yml  page-2026-04-13T10-39-08-980Z.yml  page-2026-04-13T10-53-22-195Z.yml  page-2026-04-13T10-54-09-708Z.yml  page-2026-04-13T10-54-28-079Z.yml  page-2026-04-13T10-54-45-479Z.yml  page-2026-04-13T10-55-06-316Z.yml  page-2026-04-13T10-55-37-305Z.yml  page-2026-04-13T11-08-25-809Z.yml  page-2026-04-13T11-09-47-850Z.yml  page-2026-04-13T11-10-17-302Z.yml  page-2026-04-13T11-10-40-060Z.yml  page-2026-04-13T11-10-51-209Z.yml  page-2026-04-13T18-50-31-564Z.yml  page-2026-04-13T18-52-35-151Z.yml  page-2026-04-13T18-52-49-971Z.yml  page-2026-04-13T19-06-00-252Z.yml  page-2026-04-13T19-06-23-377Z.yml  page-2026-04-13T19-06-36-303Z.yml  page-2026-04-13T19-06-55-441Z.yml  (+18 more)
agents/: evaluator.py  (+2 more)
(+148 files in other folders)
